--- a/vir/pyvenv.cfg
+++ b/vir/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Programs\Python\Python312
 include-system-site-packages = false
 version = 3.12.0
 executable = C:\Programs\Python\Python312\python.exe
-command = C:\Programs\Python\Python312\python.exe -m venv C:\Users\drf38\OneDrive\Code\Python\DCRM\vir
+command = C:\Programs\Python\Python312\python.exe -m venv C:\Users\drf38\OneDrive\Code\Python\CRM\vir
