--- a/crm/.env
+++ b/crm/.env
@@ -1,6 +1,6 @@
-AZURE_MYSQL_HOST = 'dr-demo-crm-server.mysql.database.azure.com'
-AZURE_MYSQL_NAME = 'dr-demo-crm-database'
-AZURE_MYSQL_PASSWORD = 'EM071M6MAW81F535$'
-AZURE_MYSQL_USER = 'dmuvvjpxyj'
-SECRET_KEY = 'django-insecure-x5@@_um(14zc83q3!czqvenuo6v6u8ou(oxwu__xmgol5&f@6q'
-DEBUG = 1
+AZURE_MYSQL_HOST = 
+AZURE_MYSQL_NAME = 
+AZURE_MYSQL_PASSWORD = 
+AZURE_MYSQL_USER = 
+SECRET_KEY = 
+DEBUG = 
